--- a/blog.html
+++ b/blog.html
@@ -1,1 +1,24 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Blog Posts</title>
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="assets/css/blog.css">
+</head>
+<body>
+  <header>
+    <h1>Blog Posts</h1>
+    <button id="toggle-mode">Toggle Light/Dark Mode</button>
+    <button id="back-button">Back</button>
+  </header>
+  <main>
+    <div id="posts"></div>
+  </main>
+  <footer>
+    <p><a href="index.html">Back to Home</a></p>
+  </footer>
+  <script src="assets/js/blog.js"></script>
+</body>
+</html>
