--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="stylesheet" href="assets/css/blog.css">
 </head>
+
 <body>
   <header>
     <h1>Blog Posts</h1>
@@ -19,6 +20,6 @@
   <footer>
     <p><a href="index.html">Back to Home</a></p>
   </footer>
-  <script src="assets/js/blog.js"></script>
+  <script src="assets/js/blog.js"></script> // This is the only difference between the two files
 </body>
 </html>
