--- a/blog.html
+++ b/blog.html
@@ -20,6 +20,6 @@
   <footer>
     <p><a href="index.html">Back to Home</a></p>
   </footer>
-  <script src="assets/js/blog.js"></script> // This is the only difference between the two files
+  <script src="assets/js/blog.js"></script> 
 </body>
 </html>
